--- a/pokemonbean/resources_pk/rom/web/html/combo/combo.html
+++ b/pokemonbean/resources_pk/rom/web/html/combo/combo.html
@@ -50,7 +50,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStatisticFoe" value="b" varClassName="r">
+						<c:for key="s" map="multStatisticFoe" value="b" keyClassName="java.lang.Object" varClassName="r">
 							<tr>
 								<td>{getTrStatistic(([s]))}</td>
 								<td>{b}</td>
