--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effcommonstatistics.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effcommonstatistics.html
@@ -22,7 +22,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="s" map="commonValue" value="f" varClassName='java.lang.String'>
+					<c:for key="s" map="commonValue" value="f" keyClassName="java.lang.Object" varClassName='java.lang.String'>
 						<tr>
 							<td>{getTrStatistic(([s]))}</td>
 							<td>
