--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effcounterattack.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effcounterattack.html
@@ -29,7 +29,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="c" map="sufferingDamageTypes" value="r" varClassName='r'>
+						<c:for key="c" map="sufferingDamageTypes" value="r" keyClassName="java.lang.Object" varClassName='r'>
 							<tr>
 								<td>{getTrSufferingDamageTypes(([c]))}</td>
 								<td>{r}</td>
@@ -55,7 +55,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="c" map="droppedStatDirectMove" value="r" varClassName='java.lang.Byte'>
+						<c:for key="c" map="droppedStatDirectMove" value="r" keyClassName="java.lang.Object" varClassName='java.lang.Byte'>
 							<tr>
 								<td>{getTrDroppedStatDirectMove(([c]))}</td>
 								<td>{r}</td>
