--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effdamage.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effdamage.html
@@ -221,7 +221,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="c" map="boostStatisOnceKoFoe" value="r" varClassName='java.lang.Byte'>
+						<c:for key="c" map="boostStatisOnceKoFoe" value="r" keyClassName="java.lang.Object" varClassName='java.lang.Byte'>
 							<tr>
 								<td>{getTranslatedStatisKo(([c]))}</td>
 								<td>{r}</td>
