--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effstatus.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effstatus.html
@@ -30,7 +30,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="c" map="lawStatus" value="r" varClassName='r'>
+						<c:for key="c" map="lawStatus" value="r" keyClassName="java.lang.Object" varClassName='r'>
 							<tr>
 								<c:if condition="isStatus(([c]))">
 									<td><a c:command="$clickLink({index},{([c])})" href="">{getTrLink(([c]))}</a></td>
