--- a/pokemonbean/resources_pk/rom/web/html/pokemon/data.html
+++ b/pokemonbean/resources_pk/rom/web/html/pokemon/data.html
@@ -270,7 +270,7 @@
 			</ul>
 			<br/>
 			<map width="{getMapWidth()}">
-				<c:for key="p" map="images" value="i">
+				<c:for key="p" map="images" value="i" keyClassName="java.lang.Object" varClassName="java.lang.Object" >
 					<a title="{getPlaceName(([p]))}"><c:img src="{getMiniMapImage(([p]))}"/></a>
 				</c:for>
 			</map>
