--- a/pokemonbean/resources_pk/rom/web/html/simulation/editpokemon.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/editpokemon.html
@@ -87,7 +87,7 @@
 				<br/>
 				<c:message value="msg_simulation,ev"/>
 				<br/>
-				<c:for key="s" map="ev" value="e" varClassName="aiki.beans.facade.simulation.dto.EvLine">
+				<c:for key="s" map="ev" value="e" keyClassName="java.lang.Object" varClassName="aiki.beans.facade.simulation.dto.EvLine">
 					{getTranslatedStatistic(([s]))}: <input c:validator="short_validator" c:varValue="e.ev" id="id{([s])}" name="e.ev" type="text"/><span c:for="id{([s])}" class="errormessage" c:valueMessage="msg_simulation,short_issue"> </span><br/>
 				</c:for>
 				<br/>
