--- a/pokemonbean/resources_pk/rom/web_fight/html/fighter.html
+++ b/pokemonbean/resources_pk/rom/web_fight/html/fighter.html
@@ -432,7 +432,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="s" keyClassName="aiki.game.fight.MoveTeamPosition" map="statusRelat" value="e">
+				<c:for key="s" keyClassName="aiki.game.fight.MoveTeamPosition" varClassName="java.lang.Object" map="statusRelat" value="e">
 					<tr>
 						<td>{s.getMove()}</td>
 						<c:if condition="isFoeStatusRelatTeam(([s]))">
