--- a/pokemonbean/resources_pk/rom/web_prog/html/gameprog.html
+++ b/pokemonbean/resources_pk/rom/web_prog/html/gameprog.html
@@ -49,7 +49,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<c:for key="p" map="remainingOtherTrainerPlaces" value="n" varClassName='java.lang.Integer'>
+				<c:for key="p" map="remainingOtherTrainerPlaces" value="n" keyClassName="java.lang.Object" varClassName='java.lang.Integer'>
 					<tr>
 						<td>{getRemainingOtherTrainersPlaceName(([p]))}</td>
 						<td>{n}</td>
