--- a/pokemonbean/resources_pk/rom/web/html/endround/multirelation.html
+++ b/pokemonbean/resources_pk/rom/web/html/endround/multirelation.html
@@ -21,7 +21,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="damageByStatus" value="r" varClassName='r'>
+						<c:for key="s" map="damageByStatus" value="r" keyClassName="java.lang.Object" varClassName='r'>
 							<tr>
 								<td><a c:command="$clickDamageStatus({index},{([s])})" href="">{getTrDamageStatus(([s]))}</a></td>
 								<td>{r}</td>
