--- a/pokemonbean/resources_pk/rom/web/html/items/itemforbattle.html
+++ b/pokemonbean/resources_pk/rom/web/html/items/itemforbattle.html
@@ -146,7 +146,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStatRank" value="r" varClassName="java.lang.Byte">
+						<c:for key="s" map="multStatRank" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Byte">
 							<tr>
 								<td>{getTrMultStatRank(([s]))}</td>
 								<td>{r}</td>
@@ -167,7 +167,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStatPokemonRank" value="r" varClassName="java.lang.Byte">
+						<c:for key="s" map="multStatPokemonRank" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Byte">
 							<tr>
 								<td>{getTrMultStatPkRank(([s]))}</td>
 								<td><a c:command="$clickMultStatPk({([s])})" href="">{getTrMultStatPk(([s]))}</a></td>
@@ -188,7 +188,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="boostStatisSuperEff" value="r" varClassName="java.lang.Byte">
+						<c:for key="s" map="boostStatisSuperEff" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Byte">
 							<tr>
 								<td>{getTrMultStatisSuperEff(([s]))}</td>
 								<td>{r}</td>
@@ -200,7 +200,7 @@
 			</c:if>
 			<c:if condition="!boostStatisTypes.isEmpty()">
 				<c:message value="msg_itemforbattle,boost_types"/>
-				<c:for key="t" map="boostStatisTypes" value="m" varClassName="lse">
+				<c:for key="t" map="boostStatisTypes" value="m" keyClassName="java.lang.Object" varClassName="lse">
                     <h3>{getTrMultStatisTypes(([t]))}</h3>
                     <br/>
                     <table>
@@ -211,7 +211,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <c:for key="s" map="m" value="r" varClassName="java.lang.Byte">
+                            <c:for key="s" map="m" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Byte">
                                 <tr>
                                     <td>{getTrMultStatisTypesStat(([t]),([s]))}</td>
                                     <td>{r}</td>
@@ -233,7 +233,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStat" value="r" varClassName="java.lang.String">
+						<c:for key="s" map="multStat" value="r" keyClassName="java.lang.Object" varClassName="java.lang.String">
 							<tr>
 								<td>{getTrMultStat(([s]))}</td>
 								<td>{r}</td>
@@ -253,7 +253,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="failStatus" value="r" varClassName="java.lang.String">
+						<c:for key="s" map="failStatus" value="r" keyClassName="java.lang.Object" varClassName="java.lang.String">
 							<tr>
 								<td><a c:command="$clickFailStatus({([s])})" href="">{getTrFailStatus(([s]))}</a></td>
 								<td>{r}</td>
@@ -332,7 +332,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="winEvFight" value="r" varClassName="java.lang.Short">
+						<c:for key="s" map="winEvFight" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Short">
 							<tr>
 								<td>{getTrWinEvFight(([s]))}</td>
 								<td>{r}</td>
@@ -353,7 +353,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="increasingMaxNbRoundTrap" value="r" varClassName="java.lang.Short">
+						<c:for key="s" map="increasingMaxNbRoundTrap" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Short">
 							<tr>
 								<td><a c:command="$clickTrapMove({([s])})">{getTrTrapMove(([s]))}</a></td>
 								<td>{r}</td>
@@ -374,7 +374,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="increasingMaxNbRoundGlobalMove" value="r" varClassName="java.lang.Short">
+						<c:for key="s" map="increasingMaxNbRoundGlobalMove" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Short">
 							<tr>
 								<td><a c:command="$clickGlobalMove({([s])})">{getTrGlobalMove(([s]))}</a></td>
 								<td>{r}</td>
@@ -395,7 +395,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="increasingMaxNbRoundTeamMove" value="r" varClassName="java.lang.Short">
+						<c:for key="s" map="increasingMaxNbRoundTeamMove" value="r" keyClassName="java.lang.Object" varClassName="java.lang.Short">
 							<tr>
 								<td><a c:command="$clickTeamMove({([s])})">{getTrTeamMove(([s]))}</a></td>
 								<td>{r}</td>
