--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effmultsufferedmovepower.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effmultsufferedmovepower.html
@@ -22,7 +22,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<c:for key="t" map="multMovePowerFctType" value="r" varClassName='r'>
+					<c:for key="t" map="multMovePowerFctType" value="r" keyClassName="java.lang.Object" varClassName='r'>
 						<tr>
 							<td>{getTrType(([t]))}</td>
 							<td>{r}</td>
