--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchmovetypes.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchmovetypes.html
@@ -41,7 +41,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="c" map="changeTypes" value="r" varClassName='java.lang.String'>
+						<c:for key="c" map="changeTypes" value="r" keyClassName="java.lang.Object" varClassName='java.lang.String'>
 							<tr>
 								<td>{getTrChangedTypes(([c]))}</td>
 								<td>{r}</td>
