--- a/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchtypes.html
+++ b/pokemonbean/resources_pk/rom/web/html/moves/effects/effswitchtypes.html
@@ -30,7 +30,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<c:for key="e" map="chgtTypeByEnv" value="t" varClassName='java.lang.String'>
+							<c:for key="e" map="chgtTypeByEnv" value="t" keyClassName="java.lang.Object" varClassName='java.lang.String'>
 								<tr>
 									<td>{getTrEnv(([e]))}</td>
 									<td>{t}</td>
