--- a/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
+++ b/pokemonbean/resources_pk/rom/web/html/simulation/simulationlevel.html
@@ -45,7 +45,7 @@
 		<br/>
 		<a c:command="$cancel" href=""><c:message value="msg_levelsimu,cancel"/></a><br/>
 		<map width="{getMapWidth()}">
-			<c:for key="p" map="tiles" value="b" varClassName='java.lang.String'>
+			<c:for key="p" map="tiles" value="b" keyClassName="java.lang.Object" varClassName='java.lang.String'>
 				<a c:command="$clickTile({([p])})"><c:img border="0" src="{b}"/></a>
 			</c:for>
 		</map>
