--- a/pokemonbean/resources_pk/rom/web/html/solution/solution.html
+++ b/pokemonbean/resources_pk/rom/web/html/solution/solution.html
@@ -8,7 +8,7 @@
 		<c:for className="aiki.beans.facade.solution.dto.StepDto" list="steps" var="s">
 			{([s])}<br/>
 			<p>
-				<c:for key="i" map="s.getPokemon()" value="g" varClassName="ls">
+				<c:for key="i" map="s.getPokemon()" value="g" keyClassName="java.lang.Object" varClassName="ls">
 					<table>
 						<caption><b>{getPlace(([s]),([i]))}</b></caption>
 						<thead>
