--- a/pokemonbean/resources_pk/rom/web/html/status/data.html
+++ b/pokemonbean/resources_pk/rom/web/html/status/data.html
@@ -78,7 +78,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<c:for key="s" map="multStat" value="r" varClassName='r'>
+						<c:for key="s" map="multStat" value="r" keyClassName="java.lang.Object" varClassName='r'>
 							<tr>
 								<td>{getTrMultStat(([s]))}</td>
 								<td>{r}</td>
